--Beta 1.5--	23/02/2021
Changes:
* Coord imported as Nuget package
* Namespace changes
* Assembly info updates

--Beta 1.4--	24/09/2020
New features:
* Line generator map
* Crystal generator map
* Snow generator map

Changes:
* Inheritance cleanup of cell automata neighbour method

Fixes:
* Place line method bugfixed for horizontal and vertical lines

--Beta 1.3--	23/09/2020
New Features:
* Added parallel loop for the steps
* Caves algorithim added

Changes:
* Inheritance cleanup
* Checkloop updated with else statements to save on check time

Fixes:
* Now the new map is overrided after calculating neighbours, not during
* bugfix on virtual/override void for gameoflife.cs

--Beta 1.2--	22/09/2020
New Features:
* chance to start alive added in
* tracks number of alive cells and can now return perc alive

--Beta 1.0.1--	21/09/2020
Changes:
- .net standard conversion of project to dll file

Fixes:
-Removed duplicate files

--Beta 1.0--	21/09/2020
New features:
-Coloured printing of changes over each step an option given
---green for alive
---red for dead
-Wrapping of edges is now optional
-Extinct method added in, unused

Fixes:
-Fix of change variable typo in declaration

Changes:
-step simulate method moved from game of life to cellautomata class

--Alpha 1.1--	21/09/2020
New features:
-previous state stored in cell for history tracking

Changes:
-step simulate method moved from game of life to cellautomata class