@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Uaine.GameOfLife.ConsoleApp</RootNamespace>
     <AssemblyName>Uaine.GameOfLife.ConsoleApp</AssemblyName>
     <Version>0.5.0</Version>
@@ -20,6 +20,10 @@
   <ItemGroup>
     <None Remove="LICENSE" />
     <None Remove="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Uaine.Platforms" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
