@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uaine.Coord" Version="1.2.0" />
+    <PackageReference Include="Uaine.Coord" Version="1.3.0" />
+    <PackageReference Include="Uaine.VersionController" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
